# cde_custom_airflowoperators

./: README.md  pyproject.toml
cde_setup/: Dag1.py  requirements.txt
src/custom_airflow_operator_superellipse/: arithmetic_operator.py
